Updates to support Java 21